fix: init hash scroll, runkit width overflow

--- a/notes/.vuepress/styles/index.styl
+++ b/notes/.vuepress/styles/index.styl
@@ -2,7 +2,31 @@
 @import "~styles/runkit-light.css"
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,700%7CUbuntu+Mono:400')
 
-.code-block + .code-block 
-  margin-top 20px
+.theme-default-content.content__default
+  padding-right 3.5rem
+  overflow hidden
+.code-block
+  position relative
+  // overflow hidden
+  // &:hover&:after
+  // &:after
+  //   position: absolute 
+  //   top: 0
+  //   width: 100%
+  //   height: 100%
+  //   opacity 30%
+  //   z-index 10
+  //   direction rtl
+  //   content: 'run it'
+  //   text-indent: 10px
+  //   background: #ccc
+  //   color: #000
+  //   text-align right
+  //   text-indent: 10px
+  //   font-size 30px
+  //   cursor pointer
+
+  + .code-block 
+    margin-top 20px
 .CodeMirror
   height auto
